--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,4 +1,4 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"); */
+@import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
 *,
 *::before,
 *::after {
@@ -25,7 +25,7 @@ ol {
 .header {
   width: 80%;
   margin: 0 auto;
-  padding-top: 10px;
+  padding-top: 2%;
 }
 .logo {
   font-family: Rubik;
@@ -59,19 +59,25 @@ ol {
   font-size: 17px;
   font-weight: 700;
 }
+.first_block {
+  background: radial-gradient(
+    46.76% 77.76% at 0% 0%,
+    #f74d4d 0%,
+    rgba(191, 9, 255, 0) 100%
+  );
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
 /* ------------------------------------------------ */
 .welcome_block {
-  /* background: radial-gradient(
-      41.76% 41.76% at 50% 50%,
-      #f74d4d 0%,
-      rgba(191, 9, 255, 0) 100%
-    ); */
   display: flex;
   align-items: center;
+  padding-left: 8%;
 }
-.welcome_block__left {
-  margin-left: 9%;
-}
+
 .welcome_block__left h2 {
   font-family: Open Sans;
   font-size: 70px;
@@ -111,6 +117,11 @@ ol {
 /* ------------------------------------------------ */
 .welcome_block__right_img {
   position: absolute;
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+  /* width: 860px;
+  height: 517px; */
 }
 .welcome_block__right_phone {
   position: relative;
@@ -190,7 +201,6 @@ ol {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
   margin: 0;
 }
 .code-container {
@@ -209,71 +219,184 @@ code {
   line-height: 1.5;
 }
 
-.token.comment,
-.token.prolog,
-.token.doctype,
-.token.cdata {
-  color: #7f848e;
+.orange {
+  color: rgba(255, 172, 96, 1);
+}
+.green {
+  color: rgba(26, 198, 156, 1);
+}
+.blue {
+  color: rgba(63, 164, 255, 1);
+}
+.pink {
+  color: rgba(255, 50, 198, 1);
+}
+.purple {
+  color: rgba(196, 120, 255, 1);
 }
 
-.token.punctuation {
-  color: #abb2bf;
+@media (max-width: 1200px) {
+  .nav {
+    width: 70%;
+  }
+
+  .welcome_block {
+    flex-direction: column;
+    padding-left: 0;
+    text-align: center;
+  }
+
+  .welcome_block__left {
+    width: 100%;
+    padding: 20px;
+  }
+  .btn {
+    display: flex;
+    text-align: center;
+    justify-content: center;
+  }
+  .pay_product {
+    flex-direction: column;
+    padding-right: 0;
+    text-align: center;
+  }
+
+  .pay_product__left,
+  .pay_product__right {
+    width: 100%;
+  }
+
+  .api {
+    flex-direction: column;
+  }
+.code-container{
+  margin-top: 3%;
+}
+  .api_left,
+  .api_right {
+    width: 100%;
+  }
 }
 
-.token.property,
-.token.tag,
-.token.constant,
-.token.symbol,
-.token.deleted {
-  color: #e06c75;
+@media (max-width: 768px) {
+  .welcome_block__left h2 {
+    font-size: 50px;
+  }
+
+  .pay_product__right h6 {
+    font-size: 25px;
+  }
+
+  .pay_product__right p {
+    font-size: 16px;
+    display: block;
+    margin: 17px 0;
+  }
+
+  .api_left h3 {
+    font-size: 35px;
+  }
+
+  .api_left h6 {
+    font-size: 18px;
+  }
+
+  .api_left p {
+    font-size: 15px;
+  }
+  .welcome_block__right_img {
+    display: none;
+  }
+  .welcome_block {
+    flex-direction: column;
+  }
+  .welcome_block__right_phone,
+  .kristal {
+    display: none;
+  }
+
+  .visa,
+  .risk,
+  .pay {
+    display: none;
+  }
+  .posterminal {
+    width: 200px;
+    height: 270px;
+  }
+  .code-container {
+    width: 100%;
+    margin-top: 3%;
+  }
+  code {
+    font-size: 10px;
+    line-height: 1.5;
+  }
 }
 
-.token.boolean,
-.token.number {
-  color: #d19a66;
-}
+@media (max-width: 576px) {
+  .header{
+    flex-direction: column;
+  }
+  .nav_list{
+    flex-direction: column;
+  }
+  .welcome_block__left h2 {
+    font-size: 40px;
+  }
 
-.token.selector,
-.token.attr-name,
-.token.string,
-.token.char,
-.token.builtin,
-.token.inserted {
-  color: #98c379;
-}
+  .start_btn {
+    width: 100%;
+    height: 50px;
+  }
 
-.token.operator,
-.token.entity,
-.token.url,
-.language-css .token.string,
-.style .token.string {
-  color: #56b6c2;
-}
+  .pay_product__right h6 {
+    font-size: 20px;
+  }
 
-.token.atrule,
-.token.attr-value,
-.token.keyword {
-  color: #c678dd;
-}
+  .pay_product__right p {
+    font-size: 14px;
+    display: block;
+    margin: 17px 0;
+  }
 
-.token.function,
-.token.class-name {
-  color: #61afef;
-}
+  .api_left h3 {
+    font-size: 28px;
+  }
 
-.token.regex,
-.token.important,
-.token.variable {
-  color: #c678dd;
-}
+  .api_left h6 {
+    font-size: 16px;
+  }
 
-.token.important,
-.token.bold {
-  font-weight: bold;
-}
-.token.italic {
-  font-style: italic;
-}
-.token.entity {
-  cursor: help;
+  .api_left p {
+    font-size: 13px;
+  }
+  .welcome_block__right_img {
+    display: none;
+  }
+  .welcome_block {
+    flex-direction: column;
+  }
+  .welcome_block__right_phone,
+  .kristal {
+    display: none;
+  }
+
+  .visa,
+  .risk,
+  .pay {
+    display: none;
+  }
+  .posterminal {
+    width: 200px;
+    height: 500px;
+  }
+  .code-container {
+    width: 100%;
+    margin-top: 3%;
+  }
+  code {
+    font-size: 10px;
+    line-height: 1.5;
+  }
 }
