--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Контакты</title>
-    <link rel="stylesheet" href="css/contact.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" th:href="@css/contact.css}" />
+    <link rel="stylesheet" th:href="@{css/style.css}" />
   </head>
   <body>
-    <header class="header d-flex">
-      <h1 class="logo">1984</h1>
-      <div class="nav">
-        <ul class="nav_list d-flex">
-          <li><a href="index.html">Главная</a></li>
-          <li><a href="">О нас</a></li>
-          <li><a href="contact.html">Контакты</a></li>
-          <li><a href="admin_panel.html">Aдмин-панель</a></li>
-          <!-- только для админа -->
-          <a class="nav_list__btn" href="login.html">Войти</a>
-        </ul>
-      </div>
-    </header>
+  <header class="header d-flex">
+    <h1 class="logo">1984</h1>
+    <div class="nav">
+      <ul class="nav_list d-flex">
+        <li><a href="/">Главная</a></li>
+        <li><a href="">О нас</a></li>
+        <li><a href="/contact">Контакты</a></li>
+        <li  sec:authorize="hasAuthority('ROLE_ADMIN')">
+          <a href="/admin">Aдмин-панель</a>
+        </li>
+        <a class="nav_list__btn" href="/login">Войти</a>
+      </ul>
+    </div>
+  </header>
 
     <div class="container">
       <iframe
