--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Как это работает?</title>
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" th:href="@{css/style.css}" />
+    <link rel="stylesheet" th:href="@{css/main.css}" />
   </head>
   <body>
 
@@ -13,12 +13,33 @@
       <h1 class="logo">1984</h1>
       <div class="nav">
         <ul class="nav_list d-flex">
-          <li><a href="index.html">Главная</a></li>
+          <li><a href="/">Главная</a></li>
           <li><a href="">О нас</a></li>
-          <li><a href="contact.html">Контакты</a></li>
-          <li><a href="admin_panel.html">Aдмин-панель</a></li>
-          <!-- только для админа -->
-          <a class="nav_list__btn" href="login.html">Войти</a>
+          <li><a href="/contact">Контакты</a></li>
+          <div>
+            <p th:text="'Current User: ' + ${currentUser}">Current User: [currentUser]</p>
+            <p th:text="'Current Buyer: ' + ${currentBuyer}">Current Buyer: [currentBuyer]</p>
+          </div>
+          <li sec:authorize="hasAuthority('ROLE_USER')" th:if="${user != null}">
+            <a th:href="'/user/' + ${user.id}">Профиль - продавец</a>
+          </li>
+          <li sec:authorize="!hasAuthority('ROLE_USER')"  th:if="${buyer != null}">
+            <a th:href="'/buyer/' + ${buyer.id}">Профиль - покупатель</a>
+          </li>
+          <li sec:authorize="hasAuthority('ROLE_ADMIN')">
+            <a href="/admin">Админ панель</a>
+          </li>
+          <span sec:authorize="!isAuthenticated()">
+            <li class="header__list-item_log">
+                <a href="/login" class="nav_list__btn">Войти</a>
+            </li>
+          </span>
+          <span sec:authorize="isAuthenticated()">
+            <form th:action="@{/logout}" method="post">
+                <input class="nav_list__btn" type="submit" value="Выйти"/>
+            </form>
+          </span>
+<!--          <a class="nav_list__btn" href="login.html">Войти</a>-->
         </ul>
       </div>
       </header>
@@ -44,7 +65,7 @@
           />
           <img
             class="welcome_block__right_phone"
-            src="./images/welcome_phone.svg"
+            th:src="@{/images/welcome_phone.svg}"
             alt=""
           />
           <img class="kristal" src="./images/kristal.svg" alt="" />
