--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -54,13 +54,13 @@ body {
 }
 
 .table-container {
-  max-width: 800px;
+/*  max-width: 800px;*/
   margin: 50px auto;
-  background-color: #fff;
+
   padding: 20px;
-  animation: glowingBorder 5s infinite alternate;
+/*  animation: glowingBorder 5s infinite alternate;*/
   border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+/*  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);*/
 }
 
 @keyframes glowingBorder {
@@ -155,4 +155,70 @@ table button {
 
 table button:hover {
   background-color: #ff2ecb;
+}
+
+@media screen and (max-width: 767px) {
+  .admin-container,
+  .table-container {
+    width: 90%;
+    padding: 20px;
+    margin: 50px auto;
+  }
+
+  .button-container,
+  .filter-container {
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .button-container button {
+    width: 100%;
+  }
+
+  .filter-container input,
+  .filter-container select {
+    width: 100%;
+  }
+
+  table th,
+  table td {
+    font-size: 12px;
+  }
+
+  table button {
+    padding: 3px 6px;
+    font-size: 12px;
+  }
+}
+
+/* Средние экраны (768px - 991px) */
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  .admin-container,
+  .table-container {
+    width: 70%;
+  }
+}
+
+/* Большие экраны (992px - 1199px) */
+@media screen and (min-width: 992px) and (max-width: 1199px) {
+  .admin-container,
+  .table-container {
+    width: 60%;
+  }
+}
+
+/* Очень большие экраны (1200px - 1439px) */
+@media screen and (min-width: 1200px) and (max-width: 1439px) {
+  .admin-container,
+  .table-container {
+    width: 50%;
+  }
+}
+
+/* Гигантские экраны (больше 1440px) */
+@media screen and (min-width: 1440px) {
+  .admin-container,
+  .table-container {
+    width: 40%;
+  }
 }
