--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -23,7 +23,7 @@ ol {
 /* ------------------------------------------------ */
 
 .header {
-  width: 80%;
+  width: 85%;
   margin: 0 auto;
   padding-top: 2%;
 }
@@ -90,7 +90,7 @@ ol {
   margin-bottom: 20px;
 }
 .welcome_block__left {
-  width: 35%;
+  width: 40%;
   font-family: Open Sans;
   font-size: 16px;
   font-weight: 700;
@@ -117,9 +117,6 @@ ol {
 /* ------------------------------------------------ */
 .welcome_block__right_img {
   position: absolute;
-  display: flex;
-  align-items: flex-end;
-  justify-content: flex-end;
   /* width: 860px;
   height: 517px; */
 }
@@ -132,6 +129,88 @@ ol {
   position: relative;
   left: 46%;
   bottom: 403px;
+}
+
+/* Стили для мобильных устройств */
+@media screen and (max-width: 576px) {
+  .header {
+    width: 95%;
+    padding-top: 5%;
+  }
+
+  .nav {
+    width: 60%;
+  }
+
+  .welcome_block__left h2 {
+    font-size: 36px;
+  }
+
+  .welcome_block__left {
+    width: 100%;
+  }
+
+  .start_btn {
+    width: 100%;
+    margin-top: 20px;
+  }
+
+  .welcome_block__right_phone,
+  .kristal {
+    display: none;
+  }
+}
+
+/* Стили для планшетов и небольших десктопов */
+@media screen and (min-width: 577px) and (max-width: 991px) {
+  .header {
+    width: 90%;
+    padding-top: 3%;
+  }
+
+  .nav {
+    width: 50%;
+  }
+
+  .welcome_block__left h2 {
+    font-size: 48px;
+  }
+
+  .start_btn {
+    width: 250px;
+    margin-top: 35px;
+  }
+
+  .welcome_block__right_phone,
+  .kristal {
+    display: none;
+  }
+}
+
+/* Стили для десктопов */
+@media screen and (min-width: 992px) {
+  .header {
+    width: 85%;
+    padding-top: 2%;
+  }
+
+  .nav {
+    width: 40%;
+  }
+
+  .welcome_block__left h2 {
+    font-size: 70px;
+  }
+
+  .start_btn {
+    width: 293px;
+    margin-top: 35px;
+  }
+
+  .welcome_block__right_phone,
+  .kristal {
+    display: block;
+  }
 }
 
 /* ------------------------------------------------ */
@@ -201,6 +280,7 @@ ol {
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 100vh;
   margin: 0;
 }
 .code-container {
@@ -219,6 +299,75 @@ code {
   line-height: 1.5;
 }
 
+.token.comment,
+.token.prolog,
+.token.doctype,
+.token.cdata {
+  color: #7f848e;
+}
+
+.token.punctuation {
+  color: #abb2bf;
+}
+
+.token.property,
+.token.tag,
+.token.constant,
+.token.symbol,
+.token.deleted {
+  color: #e06c75;
+}
+
+.token.boolean,
+.token.number {
+  color: #d19a66;
+}
+
+.token.selector,
+.token.attr-name,
+.token.string,
+.token.char,
+.token.builtin,
+.token.inserted {
+  color: #98c379;
+}
+
+.token.operator,
+.token.entity,
+.token.url,
+.language-css .token.string,
+.style .token.string {
+  color: #56b6c2;
+}
+
+.token.atrule,
+.token.attr-value,
+.token.keyword {
+  color: #c678dd;
+}
+
+.token.function,
+.token.class-name {
+  color: #61afef;
+}
+
+.token.regex,
+.token.important,
+.token.variable {
+  color: #c678dd;
+}
+
+.token.important,
+.token.bold {
+  font-weight: bold;
+}
+.token.italic {
+  font-style: italic;
+}
+.token.entity {
+  cursor: help;
+}
+
 .orange {
   color: rgba(255, 172, 96, 1);
 }
@@ -234,169 +383,110 @@ code {
 .purple {
   color: rgba(196, 120, 255, 1);
 }
-
-@media (max-width: 1200px) {
-  .nav {
-    width: 70%;
-  }
-
-  .welcome_block {
-    flex-direction: column;
-    padding-left: 0;
-    text-align: center;
-  }
-
-  .welcome_block__left {
-    width: 100%;
-    padding: 20px;
-  }
-  .btn {
-    display: flex;
-    text-align: center;
-    justify-content: center;
-  }
+/* Стили для мобильных устройств */
+@media screen and (max-width: 576px) {
   .pay_product {
-    flex-direction: column;
-    padding-right: 0;
-    text-align: center;
+    margin-top: 10%;
+    padding-right: 5%;
   }
 
-  .pay_product__left,
-  .pay_product__right {
+  .pay_product__left .visa {
     width: 100%;
+    height: auto;
   }
 
-  .api {
-    flex-direction: column;
-  }
-.code-container{
-  margin-top: 3%;
-}
-  .api_left,
-  .api_right {
+  .pay_product__left_div .risk,
+  .pay_product__left_div .pay {
     width: 100%;
-  }
-}
-
-@media (max-width: 768px) {
-  .welcome_block__left h2 {
-    font-size: 50px;
+    height: auto;
   }
 
   .pay_product__right h6 {
-    font-size: 25px;
+    font-size: 24px;
   }
 
   .pay_product__right p {
     font-size: 16px;
-    display: block;
-    margin: 17px 0;
+    line-height: 25px;
   }
 
-  .api_left h3 {
-    font-size: 35px;
-  }
-
-  .api_left h6 {
-    font-size: 18px;
-  }
-
-  .api_left p {
-    font-size: 15px;
-  }
-  .welcome_block__right_img {
-    display: none;
-  }
-  .welcome_block {
-    flex-direction: column;
-  }
-  .welcome_block__right_phone,
-  .kristal {
-    display: none;
-  }
-
-  .visa,
-  .risk,
-  .pay {
-    display: none;
-  }
-  .posterminal {
-    width: 200px;
-    height: 270px;
-  }
-  .code-container {
+  .api_left {
     width: 100%;
-    margin-top: 3%;
   }
-  code {
-    font-size: 10px;
-    line-height: 1.5;
+
+  .api_right {
+    display: none;
   }
 }
 
-@media (max-width: 576px) {
-  .header{
-    flex-direction: column;
-  }
-  .nav_list{
-    flex-direction: column;
-  }
-  .welcome_block__left h2 {
-    font-size: 40px;
+/* Стили для планшетов и небольших десктопов */
+@media screen and (min-width: 577px) and (max-width: 991px) {
+  .pay_product {
+    margin-top: 10%;
+    padding-right: 5%;
   }
 
-  .start_btn {
-    width: 100%;
-    height: 50px;
+  .pay_product__left .visa {
+    width: 245px;
+    height: 397px;
+  }
+
+  .pay_product__left_div .risk,
+  .pay_product__left_div .pay {
+    width: 397px;
+    height: 213px;
   }
 
   .pay_product__right h6 {
-    font-size: 20px;
-  }
-
-  .pay_product__right p {
-    font-size: 14px;
-    display: block;
-    margin: 17px 0;
-  }
-
-  .api_left h3 {
     font-size: 28px;
   }
 
-  .api_left h6 {
-    font-size: 16px;
+  .pay_product__right p {
+    font-size: 18px;
+    line-height: 30px;
   }
 
-  .api_left p {
-    font-size: 13px;
-  }
-  .welcome_block__right_img {
-    display: none;
-  }
-  .welcome_block {
-    flex-direction: column;
-  }
-  .welcome_block__right_phone,
-  .kristal {
-    display: none;
-  }
-
-  .visa,
-  .risk,
-  .pay {
-    display: none;
-  }
-  .posterminal {
-    width: 200px;
-    height: 500px;
-  }
-  .code-container {
+  .api_left {
     width: 100%;
-    margin-top: 3%;
   }
-  code {
-    font-size: 10px;
-    line-height: 1.5;
+
+  .api_right {
+    display: none;
+  }
+}
+
+/* Стили для десктопов */
+@media screen and (min-width: 992px) {
+  .pay_product {
+    margin-top: 15%;
+    padding-right: 10%;
+  }
+
+  .pay_product__left .visa {
+    width: 245px;
+    height: 397px;
+  }
+
+  .pay_product__left_div .risk,
+  .pay_product__left_div .pay {
+    width: 397px;
+    height: 213px;
+  }
+
+  .pay_product__right h6 {
+    font-size: 31px;
+  }
+
+  .pay_product__right p {
+    font-size: 19px;
+    line-height: 35px;
+  }
+
+  .api_left {
+    width: 500px;
+  }
+
+  .api_right {
+    display: flex;
   }
 }
