--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,45 +4,48 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Как это работает?</title>
-    <link rel="stylesheet" th:href="@{css/style.css}" />
+    <link rel="stylesheet" th:href="@{css/styleH.css}" />
     <link rel="stylesheet" th:href="@{css/main.css}" />
   </head>
   <body>
-
-    <header class="header d-flex">
-      <h1 class="logo">1984</h1>
-      <div class="nav">
-        <ul class="nav_list d-flex">
-          <li><a href="/">Главная</a></li>
-          <li><a href="">О нас</a></li>
-          <li><a href="/contact">Контакты</a></li>
-          <div>
-            <p th:text="'Current User: ' + ${currentUser}">Current User: [currentUser]</p>
-            <p th:text="'Current Buyer: ' + ${currentBuyer}">Current Buyer: [currentBuyer]</p>
-          </div>
-          <li sec:authorize="hasAuthority('ROLE_USER')" th:if="${user != null}">
-            <a th:href="'/user/' + ${user.id}">Профиль - продавец</a>
-          </li>
-          <li sec:authorize="!hasAuthority('ROLE_USER')"  th:if="${buyer != null}">
-            <a th:href="'/buyer/' + ${buyer.id}">Профиль - покупатель</a>
-          </li>
-          <li sec:authorize="hasAuthority('ROLE_ADMIN')">
-            <a href="/admin">Админ панель</a>
-          </li>
-          <span sec:authorize="!isAuthenticated()">
+  <header class="header d-flex">
+    <h1 class="logo">1984</h1>
+    <div class="nav">
+      <ul class="nav_list d-flex">
+        <li><a href="/">Главная</a></li>
+        <li><a href="/about">О нас</a></li>
+        <li><a href="/contact">Контакты</a></li>
+        <li th:if="${currentUser != null}">
+          <a th:href="'/user/' + ${currentUser.id}">Личный кабинет</a>
+        </li>
+        <li th:if="${currentBuyer != null}">
+          <a th:href="'/buyer/' + ${currentBuyer.id}">Покупатель</a>
+        </li>
+        <span sec:authorize="!isAuthenticated()">
             <li class="header__list-item_log">
                 <a href="/login" class="nav_list__btn">Войти</a>
             </li>
           </span>
-          <span sec:authorize="isAuthenticated()">
+        <span sec:authorize="isAuthenticated()">
             <form th:action="@{/logout}" method="post">
                 <input class="nav_list__btn" type="submit" value="Выйти"/>
             </form>
           </span>
-<!--          <a class="nav_list__btn" href="login.html">Войти</a>-->
-        </ul>
-      </div>
-      </header>
+      </ul>
+    </div>
+  </header>
+
+    <!--          <div>-->
+    <!--            <p th:text="'Current User: ' + ${currentUser}">Current User: [currentUser]</p>-->
+    <!--            <p th:text="'Current Buyer: ' + ${currentBuyer}">Current Buyer: [currentBuyer]</p>-->
+    <!--          </div>-->
+    <!--          <li sec:authorize="hasAuthority('ROLE_USER')" th:if="${currentUser != null}">-->
+    <!--            <a th:href="'/user/' + ${currentUser.id}">Профиль - продавец</a>-->
+    <!--          </li>-->
+    <!--          <li sec:authorize="!hasAuthority('ROLE_USER')"  th:if="${currentBuyer != null}">-->
+    <!--            <a th:href="'/buyer/' + ${currentBuyer.id}">Профиль - покупатель</a>-->
+    <!--          </li>-->
+
       <div class="welcome_block">
         <div class="welcome_block__left">
           <h2>
